Add more procrun parameters into a plugin configuration